--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <script type="text/x-handlebars" data-template-name='application'>
     <div class="navbar navbar-default">
       <div class='container'>
-         <a href='#' class='navbar-brand'><img src='img/flame.png' alt='logo' height='34' width='100' /></a>
+         {{#link-to 'index' class='navbar-brand'}}<img src='images/logo.png' alt='logo' height='34' width='224' />{{/link-to}}
         <ul class='nav navbar-nav navbar-right'>
           <li>{{#link-to 'index'  class='navbar-brand' }}Home{{/link-to}}</li>
-          <li>{{#link-to 'about'}}About{{/link-to}}</li>
+          <li>{{#link-to 'about' class='navbar-brand'}}About{{/link-to}}</li>
         </ul>
       </div>
     </div>
@@ -27,6 +27,9 @@
 
   <script type="text/x-handlebars" data-template-name="index">
     <h1>Welcome to The Flint & Flame!</h1>
+    <p>There are {{productsCount}} products</p>
+    <img {{bind-attr src='logo'}} alt='Logo' />
+    <p>Rendered on {{time}}</p>
   </script>
 
   <script type="text/x-handlebars" data-template-name="about">
