--- a/index.html
+++ b/index.html
@@ -26,14 +26,21 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="index">
-    <h1>Welcome to The Flint & Flame!</h1>
-    <p>There are {{productsCount}} products</p>
-    <img {{bind-attr src='logo'}} alt='Logo' />
-    <p>Rendered on {{time}}</p>
+    <div class="jumbotron">
+      <h1>Welcome to The Flint &amp; Flame!</h1>
+      <p class="tagline">
+        <img {{bind-attr src='logo'}} alt='Logo' />
+        Everything you need to make it through the winter.
+      </p>
+      <p>Browse All {{productCount}} Items &raquo;</p>
+    </div>
   </script>
 
   <script type="text/x-handlebars" data-template-name="about">
-    <h1>About the Fire Spirits</h1>
+    <h1>About The Fire Spirits</h1>
+    <p>{{contactName}}</p>
+    <img {{bind-attr src='avatar'}} alt="Avatar" height='100' width='100' />
+    <p>{{open}}</p>
   </script>
 
   <script type="text/x-handlebars" data-template-name="credits">
