--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
   <script type="text/x-handlebars" data-template-name="products">
     <h1>Products</h1>
     <ul class="list-unstyled col-md-8">
-    {{#each}}
+      {{#each}}
       <li class='row'>
         <img {{bind-attr src='image'}} class='img-thumbnail col-md-5' />
         <div class='col-md-7'>
-          <h2>{{title}}</h2>
+          {{#link-to 'product' this classNames='list-group-item'}}
+            <h2>{{title}}</h2>
+          {{/link-to}}
           <p class='product-description'>{{description}}</p>
           <p><button class='btn btn-success'>Buy for ${{price}}</button></p>
         </div>
@@ -69,9 +71,22 @@
     <h1>Contacts</h1>
     {{#each}}
       <h2>{{name}}</h2>
-      <img {{bind-attr src='avatar'}} height='100' width='100' />
+      <img {{bind-attr src='avatar'}} height='100' width='auto' />
       <p>{{about}}</p>
     {{/each}}
+  </script>
+
+  <script type='text/x-handlebars' data-template-name='product'>
+    <div class="row">
+      <div class='col-md-7'>
+        <h2>{{title}}</h2>
+        <h3 class='text-success'>${{price}}</h3>
+        <p class='text-muted'>{{description}}</p>
+      </div>
+      <div class='col-md-5'>
+        <img {{bind-attr src='image'}} class='img-thumbnail img-rounded' />
+      </div>
+    </div>
   </script>
 
   <script src="js/libs/jquery-1.10.2.js"></script>
