--- a/index.html
+++ b/index.html
@@ -50,21 +50,20 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="products">
-    <h1>Products</h1>
-    <ul class="list-unstyled col-md-8">
-      {{#each}}
-      <li class='row'>
-        <img {{bind-attr src='image'}} class='img-thumbnail col-md-5' />
-        <div class='col-md-7'>
-          <h2>{{title}}</h2>
-          <p class='product-description'>{{description}}</p>
-          {{#link-to 'product' this class='btn btn-success' tagName='button'}}
-            Buy for ${{price}}
-          {{/link-to}}
+    <div class='row'>
+      <div class='col-sm-3'>
+        <div class='list-group'>
+          {{#each}}
+            {{#link-to 'product' this classNames='list-group-item'}}
+              {{title}}
+            {{/link-to}}
+          {{/each}}
         </div>
-      </li>
-    {{/each}}
-  </ul>
+      </div>
+      <div class='col-sm-9'>
+        {{outlet}}
+      </div>
+    </div>
   </script>
 
   <script type="text/x-handlebars" data-template-name="contacts">
