--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
     </div>
   </script>
 
+  <script type='text/x-handlebars' data-template-name='products/index'>
+    <p class='text-muted'>Choose a product from those on the left!</p>
+  </script>
+
   <script src="js/libs/jquery-1.10.2.js"></script>
   <script src="js/libs/handlebars-1.1.2.js"></script>
   <script src="js/libs/ember-1.5.1.js"></script>
